# rust-wordl

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/names/: mod.rs
